--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
             </div>
-            <footer>@Code-Rei 2024</footer>
+            <footer>©Code-Rei 2024</footer>
         </div>
     </div>
 </body>
